@@ -268,7 +268,7 @@ int Rstrlen(SEXP s, int quote)
 	    int res; wchar_t wc;
 	    res = mbrtowc(&wc, p, MB_CUR_MAX, NULL);
 	    if(res > 0) {
-		len += iswprint((int)wc) ? 1 : 8;
+		len += iswprint((int)wc) ? 1 : (wc > 0xffff? 10 : 6);
 		i += (res - 1);
 		p += res;
 	    } else {
@@ -291,7 +291,7 @@ int Rstrlen(SEXP s, int quote)
 char *EncodeString(SEXP s, int w, int quote, Rprt_adj justify)
 {
     int b, b0, i, j, cnt;
-    char *p, *q, buf[9];
+    char *p, *q, buf[11];
 
     if (s == NA_STRING) {
 	p = quote ? CHAR(R_print.na_string) : CHAR(R_print.na_string_noquote);
@@ -351,7 +351,12 @@ char *EncodeString(SEXP s, int w, int quote, Rprt_adj justify)
 		if(iswprint(wc)) {
 		    for(j = 0; j < res; j++) *q++ = *p++;
 		} else {
-		    snprintf(buf, 9, "\\u%06x", (unsigned int) wc);
+#ifndef Win32
+		    if(wc > 0xfff) 
+			snprintf(buf, 11, "\\U%08x", (unsigned int) wc);
+		    else
+#endif
+			snprintf(buf, 11, "\\u%04x", (unsigned int) wc);
 		    for(j = 0; j < strlen(buf); j++) *q++ = buf[j];
 		    p += res;
 		}
